--- a/assets_about/css/main.css
+++ b/assets_about/css/main.css
@@ -57,17 +57,17 @@ h4 {
 }
 
 .btn-transparent {
-    border: 2px solid #fff;
+    border: 2px solid #333;
     font-weight: 700;
     font-size: 14px;
     background-color: transparent;
-	color: #fff;
+	color: #333;
     padding: 9px 25px;
     text-transform: uppercase;
 }
 .btn-transparent:hover {
-	background-color: #fff;
-    color: #000;
+	background-color: #333;
+    color: #fff;
     -webkit-transition: all 0.8s ease 0s;
     -moz-transition: all 0.8s ease 0s;
     transition: all 0.8s ease 0s;
@@ -89,22 +89,21 @@ h4 {
     transition: all 0.8s ease 0s;
 }
 .btn-black {
-    border: 2px solid #000;
+    border: 2px solid #333;
     font-weight: 700;
     font-size: 14px;
-    background-color: transparent;
-	color: #000;
+    background-color: #333;
+	color: #fff;
     padding: 8px 20px;
     text-transform: uppercase;
 }
 .btn-black:hover {
-    color: #fff;
-    background-color: #000;
+    color: #333;
+    background-color: #fff;
     -webkit-transition: all 0.8s ease 0s;
     -moz-transition: all 0.8s ease 0s;
     transition: all 0.8s ease 0s;
 }
-
 
 /*====================
     Custom Navbar
@@ -277,7 +276,7 @@ h4 {
 }
 .main_banner_area h1 {
     font-weight: 800;
-    font-size: 55px;
+    font-size: 45px;
     padding-bottom: 13px;
     text-transform: uppercase;
 }
@@ -295,265 +294,175 @@ h4 {
 /*===================
     Intro
 ===================*/
-section.intro {
+.main_intro_area .head_col h2 {
+	padding: 0px;
+}
+.main_intro_content {
+	padding-top: 30px;
+}
+.img_col {
+    padding-right: 0px;
+	padding-left: 0px;
+}
+.bio_item {
+    font-weight: 400;
+    font-size: 17px;
+	padding: 0px;
+}
+.bio_item span {
+    font-weight: 700;
+}
+.bio_item li {
     padding-bottom: 0px;
 }
-.intro_col {
-	padding-right: 0px;
+.bio_col .link_item li {
+    display: inline-block;
+    padding-right: 5px;
+}
+.bio_col .link_item li i {
+    font-size: 25px;
+    color: #333;
+    padding: 0px 7px;
+}
+.link_item li:hover i {
+    color: #3b5998;
+    transition: all 0.4s ease 0s;
+}
+.link_item li:nth-child(2):hover i {
+    color: #1da1f2;
+}
+.link_item li:nth-child(3):hover i {
+    color: #0077b5;
+}
+.link_item li:nth-child(4):hover i {
+    color: #eb5890;
+}
+.link_item li:nth-child(5):hover i {
+    color: #006dff;
+}
+.desc_col ul {
+    padding-top: 10px;
+}
+.desc_col ul li {
+    display: inline-block;
+    padding-right: 17px;
 }
 
 /*===================
-    Service
+    Counter Up
 ===================*/
-.service {
+.milestone {
 	background-color: #f6f6f6;
-    color: #323232;
 }
-.service p {
-    font-family: 'Open Sans',sans-serif;
-    font-size: 14px;
-    color: #666;
-}
-.main_service_area {
-	padding-top: 15px;
-}
-
-/*===================
-    Offer
-===================*/
-.main_offer_area {
-    padding-top: 20px;
-}
-.main_offer_area i {
-    border: 1px solid #000;
-    border-radius: 50%;
-    font-size: 29px;
-    padding: 15px;
-}
-.main_offer_area .col-md-4:hover i {
-    background-color: #333;
-    color: #fff;
-    -webkit-transition: all 0.4s ease-in 0s;
-    -moz-transition: all 0.4s ease-in 0s;
-    transition: all 0.4s ease-in 0s;
-}
-.main_offer_area p {
-    font-family: 'Open Sans',sans-serif;
-    font-size: 14px;
-    color: #666;
-}
-
-/*===================
-    Portfolio
-===================*/
-section.work div.head_col {
-    padding-bottom: 20px;
-}
-.work_col {
-	padding: 7px 10px;
-}
-.work_col figure {
-    background-color: #ddd;
-}
-.work_col figure figcaption {
-    background-color: #333;
-}
-.work_col [class*=" imghvr-shutter-out-"]:before, 
-.work_col [class^=imghvr-shutter-out-]:before {
-    background: #333;
-    position: absolute;
-    content: "";
-    -webkit-transition-delay: 0.105s;
-    -moz-transition-delay: 0.105s;
-    transition-delay: 0.105s;
-}
-.work_col figcaption h3 {
-    font-weight: 700;
-    text-transform: uppercase;
-}
-.work_col figcaption p {
-    font-family: 'Open Sans',sans-serif;
-    font-weight: 500;
+.milestone h2,
+.milestone h3 {
+	margin: 0px;
+    padding: 0px;
     padding-bottom: 10px;
 }
-.work_col figcaption a {
-    position: static;
+.milestone h3 {
+    font-weight: 700;
+    color: #686666;
 }
-.work_col figcaption .btn-transparent,
-.work_col figcaption .btn-white {
-	padding: 8px 10px 5px;
+.milestone i {
+    font-size: 2.49em;
+    border: 1px solid #333;
+    border-radius: 50%;
+    padding: 18px;
+    margin-bottom: 20px;
+}
+
+/*===================
+    Experiences
+====================*/
+.timeline {
+    border-left: 3px solid #da4847;
+    border-bottom-right-radius: 2px;
+    border-top-right-radius: 2px;
+    position: relative;
+    padding: 0 30px;
+    margin-left: 200px;
+}
+.timeline .item {
+    position: relative;
+    margin-bottom: 45px;
+}
+
+.timeline .item:before {
+    content: "";
+    position: absolute;
+    left: -43px;
+    top: 0;
+    display: inline-block;
+    width: 22px;
+    height: 22px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    background: #fff;
+    border: 3px solid #da4847;
+}
+.timeline .work-place,
+.timeline .study-place {
+    position: relative;
+}
+.timeline .place {
+    margin-top: 0;
+    margin-bottom: 15px;
+    font-size: 20px;
+    font-weight: 300;
+}
+.timeline .location {
+    position: absolute;
+    right: 0;
+    top: 2px;
+    color: #8a8a8a;
+}
+.timeline .location .fa {
     margin-right: 5px;
 }
-.work_col figcaption .btn-white {
-	margin-right: 0px;
-    margin-left: 5px;
-}
-.work_col figcaption i {
-    font-size: 16px;
-}
-
-/*===================
-    Label Link Contact
-===================*/
-div.label_link_contact section {
-    padding: 50px 0px;
-}
-.label_link_contact {
-	background-color: #333333;
-    color: #fff;
-}
-.label_desc p {
-	font-size: 18px;
-}
-.label_desc p:nth-child(2) {
-	font-weight: 800;
-}
-.label_link a {
-	position: relative;
-    top: 20px;
-}
-
-
-/*===================
-    Testimonial
-===================*/
-.testimonial{
-    margin: 0 15px;
-}
-.testimonial .content{
-    border: 2px solid #000;
-    padding: 0px 30px 25px;
-    margin-bottom: 15px;
-    position: relative;
-    background: #f6f6f6;
-    min-height: 100px;
-}
-.testimonial .content:after{
-    content: "";
-    border-top: 10px solid #000;
-    border-left: 10px solid transparent;
-    border-right: 9px solid transparent;
+.timeline .job-meta,
+.timeline .study-meta {
     position: absolute;
-    bottom: -10px;
-    left: 16%;
+    left: -200px;
+    top: 0;
 }
-.testimonial i {
-    font-size: 20px;
-    position: relative;
-    top: 25px;
+.timeline .job-meta .title,
+.timeline .study-meta .title{
+    font-size: 18px;
+    color: #da4847;
 }
-.testimonial .description{
-    font-family: 'Open Sans',sans-serif;
-    margin-bottom: 0px;
-    padding-left: 30px;
-    color: #333;
+.timeline .job-meta .time,
+.timeline .study-meta .time {
+    color: #8a8a8a;
 }
-.testimonial-pic{
-    float:left;
+.timeline .job-desc,
+.timeline .study-desc {
+    color: #666;
 }
-.testimonial-pic > img{
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    border: 2px solid #e5e5e5;
-    margin-left: 40px;
-}
-.testimonial .testimonial-review{
-    margin:3px 0 0 15px;
-    float: left;
-}
-.testimonial .testimonial-title{
-    font-size:16px;
-    text-transform: uppercase;
-    font-weight: bold;
-    margin:0;
-}
-.testimonial > .testimonial-review span {
-    font-family: 'Open Sans',sans-serif;
-    color: #333;
-    display: block;
-    font-size: 13px;
-    margin-bottom:5px;
-    text-transform: uppercase;
-}
-.testimonial .social-links{
-    padding:0;
-    margin:0;
-}
-.testimonial .social-links > li{
-    list-style:none;
-    display:inline-block;
-    margin-right:10px;
-}
-.owl-theme .owl-controls .owl-page.active span, .owl-theme .owl-controls.clickable .owl-page:hover span{
-    background: #111;
-}
-.owl-theme .owl-controls .owl-page span{
-    background: #eee;
-    opacity: 1;
-}
-.owl-theme .owl-controls .owl-page span{
-    width: 10px;
-    height:10px;
-    margin: 5px 6px;
-}
-
-/*===================
-    Label Client
-===================*/
-.label_client section {
-    padding: 30px 0px 0pxg;
-}
-.label_client {
-	background-color: #f6f6f6;
-}
-.label_client .owl-controls {
-	visibility: hidden;
-}
-
-/*===================
-    Blog
-===================*/
-.main_blog_area {
-    padding-top: 20px;
-}
-.main_blog_area .blog_detail {
-    font-family: 'Open Sans',sans-serif;
-    padding: 8px 0px;
-}
-.main_blog_area .blog_detail li {
+.timeline .item:after {
+    content: "";
+    position: absolute;
+    left: -37px;
+    top: 6px;
     display: inline-block;
-    color: #444;
-    padding-right: 10px;
-}
-.blog_content h6 {
-    font-weight: 700;
-    font-size: 20px;
-    text-transform: inherit;
-}
-.link_blog {
-    font-weight: 700;
-    color: #333;
-}
-.link_blog i {
-    padding-left: 7px;
-}
-a.link_blog:after {
-    border-bottom: 2px solid #333;
-    content: ' ';
-    display: block;
-    position: relative;
-    top: 4px;
-    width: 33%;
-    opacity: 0;
-    transition: all 0.4s ease-in 0s;
-}
-a.link_blog:hover,
-a.link_blog:active,
-a.link_blog:visited,
-a.link_blog:hover:after {
-    color: #333;
-    opacity: 1;
+    width: 10px;
+    height: 10px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    background: #da4847;
+    z-index: 10;
 }
 
 /*===================
