--- a/assets_about/css/main.css
+++ b/assets_about/css/main.css
@@ -55,7 +55,9 @@ h4 {
     font-size: 14px;
     color: #666;
 }
-
+.bg-gray {
+    background-color: #f6f6f6;
+}
 .btn-transparent {
     border: 2px solid #333;
     font-weight: 700;
@@ -351,9 +353,6 @@ h4 {
 /*===================
     Counter Up
 ===================*/
-.milestone {
-	background-color: #f6f6f6;
-}
 .milestone h2,
 .milestone h3 {
 	margin: 0px;
@@ -373,8 +372,64 @@ h4 {
 }
 
 /*===================
+    Service
+===================*/
+div.service_content {
+    padding-bottom: 20px;
+}
+.service_content i {
+    font-size: 25px;
+	background-color: #fff;
+    padding: 18px;
+}
+.service_content:hover i {
+    background-color: #333;
+    color: #fff;
+    transition: 0.4s ease-in 0s;
+}
+.service_content p {
+	font-family: 'Open Sans',sans-serif;
+    font-weight: 700;
+    color: #717171;
+}
+/*===================
     Experiences
 ====================*/
+.main_skill_area {
+	padding-top: 30px;
+}
+.barWrapper {
+	padding-bottom: 10px;
+}
+.tooltip{ 
+  position:relative;
+  float:right;
+}
+.tooltip > .tooltip-inner {
+    font-weight:bold; 
+    font-size: 10px;
+    background-color: #333; padding:5px 10px;
+    color:#eee;
+}
+.popOver + .tooltip > .tooltip-arrow {	
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent; 
+    border-top: 5px solid #333;
+}
+.progress{
+    border-radius: 0px 25px 25px 0px;
+    height: 17px;
+    overflow:visible;
+}
+.progress-bar{
+    background: #333; 
+    border-radius: 0px 25px 25px 0px;
+    height: 10px;
+    margin-top: 3px;
+    -webkit-transition: width 1.5s ease-in-out;
+    transition: width 2.5s ease-in-out;
+}
+
 
 /*===================
     Label Social
